--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[09/2025] Two papers are accepted by NeurIPS 2025 workshops. </li>
+		<li>[09/2025] Three papers are accepted by NeurIPS 2025 workshops. </li>
 		<li>[09/2025] A paper is accepted by NeurIPS 2025. </li>
 		<li>[09/2025] A tutorial is accepted by AAAI 2026. </li>
 		<li>[09/2025] I will serve as a reviewer for ICLR 2026. </li>
