--- a/publications.html
+++ b/publications.html
@@ -351,6 +351,11 @@
             <p><strong>Workshop Papers</strong></p>
                 <ol>
 					<li>
+						<strong>[NeurIPS'25-W]</strong> Combining Online CUR Decomposition and Matrix Sketching for Data Streams in Open Feature Spaces. <br>
+						Zhong Chen, <strong>Chen Zhao</strong>, Zhenyi Wang, Yi He. <br>
+						<em>NeurIPS Workshop on Constrained Optimization for Machine Learning</em>, 2025
+					</li>
+					<li>
 						<strong>[NeurIPS'25-W]</strong> A Theoretical Analysis for CUR Decomposition based Active Learning and Feature Selection. <br>
 						Zhong Chen, <strong>Chen Zhao</strong>, Yi He. <br>
 						<em>NeurIPS Workshop on Optimization for Machine Learning</em>, 2025
