--- a/publications.html
+++ b/publications.html
@@ -351,6 +351,21 @@
             <p><strong>Workshop Papers</strong></p>
                 <ol>
 					<li>
+						<strong>[NeurIPS'25-W]</strong> A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
+						Dong Li, Guihong Wan, Xintao Wu, Xinyu Wu, Yi He, Zhong Chen, Ninghui Hao, <strong>Chen Zhao</strong>. <br>
+						<em>NeurIPS Workshop on Imageomics: Discovering Biological Knowledge from Images Using AI</em>, 2025
+					</li>
+					<li>
+						<strong>[NeurIPS'25-W]</strong> A Comparative Study of Semi-supervised Deep Anomaly Detection and LLMs for Monitoring Patients with Severe Health Status Undergoing Radiotherapy. <br>
+						Yang Yan, Xinglei Shen, Ronald Chen, Hao Gao, <strong>Chen Zhao</strong>, Guihong Wan, Yi He, Zhong Chen. <br>
+						<em>NeurIPS Workshop on Multi-modal Foundation Models and Large Language Models for Life Sciences</em>, 2025
+					</li>
+					<li>
+						<strong>[NeurIPS'25-W]</strong> Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
+						Dong Li, Guihong Wan, Xintao Wu, Xinyu Wu, Xiaohui Chen, Yi He, Zhong Chen, Ninghui Hao, <strong>Chen Zhao</strong>. <br>
+						<em>NeurIPS Workshop on Multi-modal Foundation Models and Large Language Models for Life Sciences</em>, 2025
+					</li>
+					<li>
 						<strong>[NeurIPS'25-W]</strong> Combining Online CUR Decomposition and Matrix Sketching for Data Streams in Open Feature Spaces. <br>
 						Zhong Chen, <strong>Chen Zhao</strong>, Zhenyi Wang, Yi He. <br>
 						<em>NeurIPS Workshop on Constrained Optimization for Machine Learning</em>, 2025
