--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
-				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
+				<li><strong>[SPC]</strong>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
 			</ul>
