--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[09/2025] I will serve as a Senior PC (SPC) member for PAKDD 2026. </li>
 		<li>[09/2025] Six papers are accepted by NeurIPS 2025 workshops. </li>
 		<li>[09/2025] A paper is accepted by NeurIPS 2025. </li>
 		<li>[09/2025] A tutorial is accepted by AAAI 2026. </li>
@@ -108,7 +109,6 @@
 		<li>[09/2025] I will serve as a PC member for WWW 2026. </li>
 		<li>[08/2025] I will serve as a PC member for AISTATS 2026. </li>
 		<li>[08/2025] An NSF grant is awarded. </li>	
-		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
 		<li>[07/2025] I will serve as a PC member for AAAI 2026. </li>
 		<li>[07/2025] I will serve as a PC member for KDD 2026 (August cycle). </li>
 		<li>[05/2025] I will serve as a panelist for NSF. </li>
