--- a/talks.html
+++ b/talks.html
@@ -55,7 +55,7 @@
                         <li>
                             Dong Li, Guihong Wan, Xintao Wu, Yevgeniy Semenov, <strong>Chen Zhao</strong>. <br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI), Singapore, January 21st, 2026.
-<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
+                            [<a href="https://sites.google.com/view/aaai26tutorial-cpath/home">Website</a>]
 <!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
                         </li>
                         
@@ -86,7 +86,7 @@
                         <li>
                             Ninghui Hao, Boshen Yan, Dong Li, <strong>Chen Zhao</strong>, Guihong Wan. <br>
                             The IEEE International Conference on Data Mining (ICDM), Washington D.C., November 13th, 2025.
-<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] --> 
+                            [<a href="https://sites.google.com/view/icdm25tutorial-ai4pm/main">Website</a>] 
 <!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] --> 
                         </li>
                     </ul>
