--- a/services.html
+++ b/services.html
@@ -199,6 +199,8 @@
             <ul>
 		    <li>2025:
 			<ul>
+				<li>Knowledge-Based Systems</li>
+				<li>Engineering Science and Technology, an International Journal</li>
 				<li>IEEE Transactions on Industrial Informatics</li>
 				<li>Entropy, MDPI</li>
 				<li>IEEE Transactions on Big Data</li>
