--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,11 @@
             <p><strong>Preprints</strong></p>
                 <ol>
 
-
+					<li>
+						Explainable Image-Centric Forgery Detection: A Survey. <br>
+						Xinyu Wu, Xiaohui Chen, Xintao Wu, Dong Li, Zhong Chen, Yi He, <strong>Chen Zhao</strong>. <br>
+						<em>TechRxiv preprint, DOI: 10.36227/techrxiv.176101439.91738583/v1</em>
+					</li>
 					<li>
 						Face4FairShifts: A Large Image Benchmark for Fairness and Robust Learning across Visual Domains. <br>
 						Yumeng Lin, Dong Li, Xintao Wu, Minglai Shao, Xujiang Zhao, Zhong Chen, <strong>Chen Zhao</strong>. <br>
