--- a/publications.html
+++ b/publications.html
@@ -80,11 +80,6 @@
                         <em>ArXiv preprint, 2501.15724</em>
                     </li>
                     <li>
-                        Fair In-Context Learning via Latent Concept Variables. <br>
-                        Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
-                        <em>ArXiv preprint, 2411.02671</em>
-                    </li>
-                    <li>
                 		Graphs Generalization under Distribution Shifts. </br>
                 		Qin Tian, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
                 		<em>ArXiv preprint, 2403.16334</em>
@@ -145,7 +140,7 @@
 				<strong>KDD</strong>(5), 
                 <strong>IJCAI</strong>(4), 
 				<strong>ACL</strong>(2), 
-                <strong>AAAI</strong>(3),
+                <strong>AAAI</strong>(4),
                 <strong>CVPR</strong>(1), 
                 <strong>ICDE</strong>(1),
                 <strong>WWW</strong>(1), 
@@ -154,7 +149,7 @@
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
                 <strong>ICASSP</strong>(3), 
-                <strong>IEEE BigData</strong>(3), 
+                <strong>IEEE BigData</strong>(4), 
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
                 <strong>ICKG</strong>(2), 
@@ -163,6 +158,16 @@
             </p>
             
                 <ol>
+		<li>
+			<strong>[AAAI'26]</strong> Fine-tuning Zero-shot Large Language Models for Patient-reported Outcomes. <br>
+			Yang Yan, Matthew W. Chen, Jiayi Lyu, <strong>Chen Zhao</strong>, Hao Gao, Zhong Chen <br>
+			<em>In Proceedings of the AAAI Conference on Artificial Intelligence (Student Abstract)</em>, 2026
+        </li>
+		<li>
+			Fair In-Context Learning via Latent Concept Variables. <br>
+			Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
+			<em>In Proceedings of the IEEE International Conference on Big Data</em>, 2025
+		</li>
 		<li>
 			<strong>[NeurIPS'25]</strong> SolverLLM: Leveraging Test-Time Scaling for Optimization Problem via LLM-Guided Search. </br>
 			Dong Li, Xujiang Zhao, Linlin Yu, Yanchi Liu, Wei Cheng, Zhengzhang Chen, Zhong Chen, Feng Chen, <strong>Chen Zhao</strong>, Haifeng Chen. <br/>
@@ -222,7 +227,7 @@
                     <li>
                         <strong>[AAAI'25]</strong> Multi-View Unsupervised Column Subset Selection via Combinatorial Search. <br>
                         Guihong Wan, Ninghui Hao, Crystal Maung, Haim Schweitzer, <strong>Chen Zhao</strong>, Kun-Hsing Yu, Yevgeniy Semenov <br>
-                        <em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
+                        <em>In Proceedings of the AAAI Conference on Artificial Intelligence (Student Abstract)</em>, 2025
                     </li>
                     <li>
                         <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
