--- a/publications.html
+++ b/publications.html
@@ -164,7 +164,7 @@
 			<em>In Proceedings of the AAAI Conference on Artificial Intelligence (Student Abstract)</em>, 2026
         </li>
 		<li>
-			Fair In-Context Learning via Latent Concept Variables. <br>
+			<strong>[BigData'25]</strong> Fair In-Context Learning via Latent Concept Variables. <br>
 			Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
 			<em>In Proceedings of the IEEE International Conference on Big Data</em>, 2025
 		</li>
