--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,7 @@
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
                 <strong>ICASSP</strong>(3), 
-                <strong>IEEE BigData</strong>(4), 
+                <strong>IEEE BigData</strong>(5), 
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
                 <strong>ICKG</strong>(2), 
@@ -163,6 +163,11 @@
 			Yang Yan, Matthew W. Chen, Jiayi Lyu, <strong>Chen Zhao</strong>, Hao Gao, Zhong Chen <br>
 			<em>In Proceedings of the AAAI Conference on Artificial Intelligence (Student Abstract)</em>, 2026
         </li>
+		<li>
+			<strong>[BigData'25]</strong> Fine-Tuning Vision-Language Models for Multimodal Polymer Property Prediction. <br>
+			An Vuong, Minh-Hao Van, Prateek Verma, <strong>Chen Zhao</strong>, Xintao Wu. <br>
+			<em>In Proceedings of the IEEE International Conference on Big Data</em>, 2025
+		</li>
 		<li>
 			<strong>[BigData'25]</strong> Fair In-Context Learning via Latent Concept Variables. <br>
 			Karuna Bhaila, Minh-Hao Van, Kennedy Edemacu, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br>
