--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[11/2025] Five papers are accepted by AAAI 2026, 1 oral (main track), 3 posters (main track), and 1 student abstract. </li>
+		<li>[11/2025] One paper is accepted by TMLR.</li>
+		<li>[11/2025] Five papers are accepted by AAAI 2026, 4 in the main track and 1 student abstract. </li>
 		<li>[10/2025] Two papers are accepted by IEEE BigData 2025. </li>
 		<li>[09/2025] I will serve as a Senior PC (SPC) member for PAKDD 2026. </li>
 		<li>[09/2025] Six papers are accepted by NeurIPS 2025 workshops. </li>
