--- a/publications.html
+++ b/publications.html
@@ -70,11 +70,6 @@
 						<em>ArXiv preprint, 2506.20743</em>
 				    </li>
                     <li>
-                        Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
-                        Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Xiaohui Chen, Yi He, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
-                        <em>ArXiv preprint, 2503.09091</em>
-                    </li>
-                    <li>
                         A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
                         Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
                         <em>ArXiv preprint, 2501.15724</em>
@@ -101,21 +96,26 @@
                 <ol>
 
 		    	<li>
-                        	<strong>[KBS]</strong> Out-of-Distribution Detection in Heterogeneous Graphs via Energy Propagation. <br>
-                		Yin Tao, <strong>Chen Zhao</strong>, Xiaoyan Liu, Minglai Shao. <br/>
-                        	<em>Knowledge-Based Systems</em>, 2025
-                    	</li>
-                    	<li>
-                        	<strong>[DLT]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <br>
-                		Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
-                        	<em>The ACM Distributed Ledger Technologies: Research and Practice</em>, 2024
-                    	</li>
-                    	<li>
-                        	<strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
-                        	Haoliang Wang, <strong>Chen Zhao</strong>, Feng Chen. <br>
-                        	<em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
-                    	</li>
-                    	<li>
+					<li>
+                        <strong>[TMLR]</strong> Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
+                        Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Xiaohui Chen, Yi He, Zhong Chen, Peter K. Sorger, <strong>Chen Zhao</strong>. <br>
+                        <em>Transactions on Machine Learning Research</em>, 2025
+                    </li>
+						<strong>[KBS]</strong> Out-of-Distribution Detection in Heterogeneous Graphs via Energy Propagation. <br>
+						Yin Tao, <strong>Chen Zhao</strong>, Xiaoyan Liu, Minglai Shao. <br/>
+						<em>Knowledge-Based Systems</em>, 2025
+					</li>
+					<li>
+						<strong>[DLT]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <br>
+						Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
+						<em>The ACM Distributed Ledger Technologies: Research and Practice</em>, 2024
+					</li>
+					<li>
+						<strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
+						Haoliang Wang, <strong>Chen Zhao</strong>, Feng Chen. <br>
+						<em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
+					</li>
+                    <li>
                 		<strong>[TKDD]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. </br>
                 		<strong>Chen Zhao</strong>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
                 		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
