--- a/talks.html
+++ b/talks.html
@@ -127,11 +127,16 @@
 
             <p><strong>Invited Talks</strong></p>
             <ul>
-                
+                <li> Supervised Algorithmic Fairness in Distribution Shifts.
+                    <ul>
+                        <li><strong>[Keynote Talk]</strong> The International Workshop on Adaptable, Reliable, and Responsible Learning (November 2025, Washington D.C., USA, Host: Yi He @ ICDM 2025) </li>
+                        <li><strong>[Guest Lecture]</strong> CS/SE 7301, Recent Advances in Computing - Trustworth and Secure AI (November 2025, Online, Host: Bhavani Thuraisingham @ UT Dallas) </li>
+                    </ul>
+                </li>
                 <li>Advancements in Foundation Models for Computational Pathology.
                     <ul>
-                        <li><strong>[Keynote Talk]</strong> The workshop on Foundational AI for Pervasive Computing (June 2025, Sydney, Australia, Host: Beiyu Lin) </li>
-                        <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer)</li>
+                        <li><strong>[Keynote Talk]</strong> The workshop on Foundational AI for Pervasive Computing (June 2025, Sydney, Australia, Host: Beiyu Lin @ PAKDD 2025) </li>
+                        <li>AAAI Bridge between AI and Scientific Knowledge Organization (February 2025, Philadelphia, PA, USA, Host: Azanzi Jiomekong and Sören Auer @ AAAI 2025)</li>
                     </ul>
                 </li>
                 
