--- a/talks.html
+++ b/talks.html
@@ -142,7 +142,7 @@
                 
                 <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
-                        <li>Department of Computer Science, Brigham Young University (March 2025, Provo, UT, USA, Host: Porter Jenkins)</li>
+                        <li><strong>[Guest Lecture]</strong> Department of Computer Science, Brigham Young University (March 2025, Provo, UT, USA, Host: Porter Jenkins @ BYU)</li>
                         <li>AI TIME (October 2024, Online, Host: Qing Qi)</li>
                         <li>Graduate Seminar, Baylor University (September 2024, Waco, TX, USA, Host: Eunjee Song)</li>
                         <li>Equifax Inc. (July 2024, Online, Host: Joseph White)</li>
