--- a/services.html
+++ b/services.html
@@ -50,7 +50,11 @@
 
             <p><strong>Chair-ship and Organizer </strong></p>
             <ul>
-                    <li>2025:
+                    <li>2026:
+						<ul>
+							<li>[Poster Chair] The IEEE International Conference on Data Mining (ICDM'26).</li>
+						</ul>
+					<li>2025:
                         <ul>
 						    <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'25).</li>
 						    <li>[Organizer, Chair] <a href="https://arrl-icdm.github.io/arrl2025/">The International Workshop on Adaptable, Reliable, and Responsible Learning</a> (ARRL @ ICDM'25)</li>
