--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
                             <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
-                            <li>[Co-Chair] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/CommitteeMember.html#:~:text=Big%20Data%20Cup%20Challenges%20Co%2DChairs">Big Data Cup Challenges</a> (IEEE BigData'24).</li>
+                            <li>[Challenge Cup Chair] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/CommitteeMember.html#:~:text=Big%20Data%20Cup%20Challenges%20Co%2DChairs">The IEEE International Conference on Big Data</a> (IEEE BigData'24).</li>
                             <li>[Best Poster Award Committee] Ph.D. Forum (IEEE BigData'24).</li>
 			    <li>[Organizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
                         </ul>
