--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[11/2025] I will serve as the Poster Chair for ICDM 2026.</li>
 		<li>[11/2025] I will give a keynote talk and a guest lecture at the ICDM 2025 workshop and UT Dallas. </li>
 		<li>[11/2025] One paper is accepted by TMLR.</li>
 		<li>[11/2025] Five papers are accepted by AAAI 2026, 4 in the main track and 1 student abstract. </li>
