--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 			<li>Distribution Shift and Domain Generalization;</li>
 			<li>Graph Learning;</li>
 			<li>Computational Biology;</li>
-			<li>Causal Learning and Structural Causal Mechanisms.</li>
+			<li>Large Language Models.</li>
 	    	</ul>
         </div>
 
