--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 		<li>[10/2025] Two papers are accepted by IEEE BigData 2025. </li>
 		<li>[09/2025] I will serve as a Senior PC (SPC) member for PAKDD 2026. </li>
 		<li>[09/2025] Six papers are accepted by NeurIPS 2025 workshops. </li>
-		<li>[09/2025] A paper is accepted by NeurIPS 2025. </li>
-		<li>[09/2025] A tutorial is accepted by AAAI 2026. </li>
+		<li>[09/2025] One paper is accepted by NeurIPS 2025. </li>
+		<li>[09/2025] One tutorial is accepted by AAAI 2026. </li>
 		<li>[09/2025] I will serve as a reviewer for ICLR 2026. </li>
 		<li>[09/2025] I will serve as a PC member for WWW 2026. </li>
 		<li>[08/2025] I will serve as a PC member for AISTATS 2026. </li>
