--- a/services.html
+++ b/services.html
@@ -203,6 +203,8 @@
             <ul>
 		    <li>2025:
 			<ul>
+				<li>JMIR Medical Education</li>
+				<li>Neurocomputing</li>
 				<li>Knowledge-Based Systems</li>
 				<li>Engineering Science and Technology, an International Journal</li>
 				<li>IEEE Transactions on Industrial Informatics</li>
