--- a/students.html
+++ b/students.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Teaching | Chen Zhao </title>
+    <title>Students | Chen Zhao </title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/small-business.css" rel="stylesheet" />
     <link href="css/all.css" rel="stylesheet" />
