--- a/services.html
+++ b/services.html
@@ -107,6 +107,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>International Joint Conference on Artificial Intelligence (IJCAI)</li> 
 				<li>The Web Conference (WWW)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
