--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
+		<li>[01/2026] I received a Gift Fund from NEC Laboratories America. </li>
+		<!-- <li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
 		<li>[12/2025] I will serve as a PC member for IJCAI 2026. </li>
 		<li>[11/2025] I will serve as the Poster Chair for ICDM 2026.</li>
 		<li>[11/2025] I will give a keynote talk and a guest lecture at the ICDM 2025 workshop and UT Dallas. </li>
@@ -148,7 +149,7 @@
 		<li>[01/2025] I will serve as the Tutorial Chair for ICDM 2025. </li>
 		<li>[01/2025] I will serve as a reviewer for KDD 2025 (February cycle). </li>
 		<li>[01/2025] I will serve as a reviewer for TKDD. </li>
-		<li>[01/2025] I will serve as a reviewer for the Journal of Pattern Recognition. </li>
+		<li>[01/2025] I will serve as a reviewer for the Journal of Pattern Recognition. </li> -->
 	    </ul>
 	    
 	<div class="my-4 text-left">
@@ -308,8 +309,9 @@
 	<div class="my-4 text-left">
 	    <h2>Awards & Honors</h2>
 		<ul>
+			<li type="disc"> <strong>PI</strong>, Gift Fund (01/2026). NEC Laboratories America. </li>
 			<li type="disc"> <strong>Co-PI</strong>,  National Science Foundation (NSF). “IUCRC Phase I Baylor University: Center for Responsible Artificial Intelligence and Governance (CRAIG)” [<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2515265&HistoricalAwards=false">Certificate</a>]. Duration: 10/2025 - 09/2030. $510,814.</li>
-			<li type="disc"> <strong>PI</strong>, Gift Fund. NEC Laboratories America. </li>
+			<li type="disc"> <strong>PI</strong>, Gift Fund (05/2025). NEC Laboratories America. </li>
 			<li type="disc"> Outstanding Reviewer. The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
 			<li type="disc"> Dissertation Research Award. The University of Texas at Dallas, 2021-2022. </li>
 			<li type="disc"> Student Travel Award. IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
