--- a/students.html
+++ b/students.html
@@ -125,6 +125,14 @@
                         </p>
                     </div>
 
+                    <div class="image-wrapper" style="text-align: center">
+                        <img src="./files/student_imgs/maisha_rashid.jpg" alt="Maisha Binte Rashid" width="200"> 
+                        <p>
+                            <a href="https://www.linkedin.com/in/maisha-binte-rashid/">Maisha Rashid</a> <br>
+                            Ph.D. Student (2021 Fall - )
+                        </p>
+                    </div>
+
                     
                 </div>
             </div>    
