--- a/students.html
+++ b/students.html
@@ -161,9 +161,12 @@
             		<li>Kai Jiang, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
                     <li>Kangshuo Li, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
                     <li>Sadaf Md Halim, Ph.D. student, The University of Texas at Dallas, 2025 </li>
+                        <ul>
+                            <li>First Employment: Software Engineer, Google</li>
+                        </ul>
                     <li>Haoliang Wang, Ph.D. student, The University of Texas at Dallas, 2025 </li>
                         <ul>
-                            <li>First Employment: Assistant Professor @ Nanchang Hangkong University, China</li>
+                            <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
                         </ul>
             	</ul>
             </div>
