--- a/students.html
+++ b/students.html
@@ -147,10 +147,20 @@
                     <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
                     <li>Abhishek Raj, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
                     <li>Kai Jiang, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
+
                     
                     <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 </li>
+                        <ul>
+                            <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
+                        </ul>
             		<li>Feng Mi, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
-            		<li>Alessandra Rodriguez, M.S., Department of Computer Science, Baylor University, 2023  </li>
+                        <ul>
+                            <li>First Employment: Data Scientist, Fidelity Investments</li>
+                        </ul>
+            		<li>Alejandro Rodriguez Perez, M.S., Department of Computer Science, Baylor University, 2023  </li>
+                        <ul>
+                            <li>First Employment: AI Scientist, Cambia Health Solutions</li>
+                        </ul>
             	</ul>
             </div>
 
@@ -160,6 +170,10 @@
             	<ul>
             		<li>Kai Jiang, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
                     <li>Kangshuo Li, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
+                    <li>Tianhao Wang, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
+                    <li>Yuzhe Ou, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
+
+                    
                     <li>Sadaf Md Halim, Ph.D. student, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Software Engineer, Google</li>
