--- a/students.html
+++ b/students.html
@@ -149,11 +149,11 @@
                     <li>Kai Jiang, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
 
                     
-                    <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 </li>
+                    <li>Shaif Chowdhury, Ph.D., Department of Computer Science, Baylor University, 2025 </li>
                         <ul>
                             <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
                         </ul>
-            		<li>Feng Mi, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+            		<li>Feng Mi, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Data Scientist, Fidelity Investments</li>
                         </ul>
@@ -174,11 +174,11 @@
                     <li>Yuzhe Ou, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
 
                     
-                    <li>Sadaf Md Halim, Ph.D. student, The University of Texas at Dallas, 2025 </li>
+                    <li>Sadaf Md Halim, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Software Engineer, Google</li>
                         </ul>
-                    <li>Haoliang Wang, Ph.D. student, The University of Texas at Dallas, 2025 </li>
+                    <li>Haoliang Wang, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
                         </ul>
