--- a/students.html
+++ b/students.html
@@ -142,22 +142,22 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
-                    <li><strong>Hunter Buttrum</strong>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
-            		<li><strong>Joseph Yu</strong>, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
-                    <li><strong>Evan Collins</strong>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
-                    <li><strong>Abhishek Raj</strong>, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
-                    <li><strong>Kai Jiang</strong>, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
+                    <li><u>Hunter Buttrum</u>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
+            		<li><u>Joseph Yu</u>, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
+                    <li><u>Evan Collins</u>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
+                    <li><u>Abhishek Raj</u>, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
+                    <li><u>Kai Jiang</u>, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
 
                     
-                    <li><strong>Shaif Chowdhury, Ph.D.</strong>, Department of Computer Science, Baylor University, 2025 </li>
+                    <li><u>Shaif Chowdhury, Ph.D.</u>, Department of Computer Science, Baylor University, 2025 </li>
                         <ul>
                             <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
                         </ul>
-            		<li><strong>Feng Mi, Ph.D.</strong>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+            		<li><u>Feng Mi, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Data Scientist, Fidelity Investments</li>
                         </ul>
-            		<li><strong>Alejandro Rodriguez Perez, M.S.</strong>, Department of Computer Science, Baylor University, 2023  </li>
+            		<li><u>Alejandro Rodriguez Perez, M.S.</u>, Department of Computer Science, Baylor University, 2023  </li>
                         <ul>
                             <li>First Employment: AI Scientist, Cambia Health Solutions</li>
                         </ul>
@@ -168,17 +168,17 @@
             <div>
             <p><strong>Graduate Students Mentored (Beyond Baylor)</strong></p>
             	<ul>
-            		<li><strong>Kai Jiang</strong>, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
-                    <li><strong>Kangshuo Li</strong>, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
-                    <li><strong>Tianhao Wang</strong>, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
-                    <li><strong>Yuzhe Ou</strong>, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
+            		<li><u>Kai Jiang</u>, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
+                    <li><u>Kangshuo Li</u>, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
+                    <li><u>Tianhao Wang</u>, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
+                    <li><u>Yuzhe Ou</u>, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
 
                     
-                    <li><strong>Sadaf Md Halim, Ph.D.</strong>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                    <li><u>Sadaf Md Halim, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Software Engineer, Google</li>
                         </ul>
-                    <li><strong>Haoliang Wang, Ph.D.</strong>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                    <li><u>Haoliang Wang, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                         <ul>
                             <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
                         </ul>
