--- a/students.html
+++ b/students.html
@@ -148,19 +148,20 @@
                     <li><u>Abhishek Raj</u>, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
                     <li><u>Kai Jiang</u>, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
 
-                    
-                    <li><u>Shaif Chowdhury, Ph.D.</u>, Department of Computer Science, Baylor University, 2025 </li>
-                        <ul>
-                            <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
-                        </ul>
-            		<li><u>Feng Mi, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
-                        <ul>
-                            <li>First Employment: Data Scientist, Fidelity Investments</li>
-                        </ul>
-            		<li><u>Alejandro Rodriguez Perez, M.S.</u>, Department of Computer Science, Baylor University, 2023  </li>
-                        <ul>
-                            <li>First Employment: AI Scientist, Cambia Health Solutions</li>
-                        </ul>
+                    <div style="background-color: #F2F3F4;">
+                        <li><u>Shaif Chowdhury, Ph.D.</u>, Department of Computer Science, Baylor University, 2025 </li>
+                            <ul>
+                                <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
+                            </ul>
+                		<li><u>Feng Mi, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                            <ul>
+                                <li>First Employment: Data Scientist, Fidelity Investments</li>
+                            </ul>
+                		<li><u>Alejandro Rodriguez Perez, M.S.</u>, Department of Computer Science, Baylor University, 2023  </li>
+                            <ul>
+                                <li>First Employment: AI Scientist, Cambia Health Solutions</li>
+                            </ul>
+                    </div>
             	</ul>
             </div>
 
@@ -173,15 +174,16 @@
                     <li><u>Tianhao Wang</u>, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
                     <li><u>Yuzhe Ou</u>, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
 
-                    
-                    <li><u>Sadaf Md Halim, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
-                        <ul>
-                            <li>First Employment: Software Engineer, Google</li>
-                        </ul>
-                    <li><u>Haoliang Wang, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
-                        <ul>
-                            <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
-                        </ul>
+                    <div style="background-color: #F2F3F4;">
+                        <li><u>Sadaf Md Halim, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                            <ul>
+                                <li>First Employment: Software Engineer, Google</li>
+                            </ul>
+                        <li><u>Haoliang Wang, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                            <ul>
+                                <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
+                            </ul>
+                    </div>
             	</ul>
             </div>
 
