--- a/students.html
+++ b/students.html
@@ -142,22 +142,22 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
-                    <li><u>Hunter Buttrum</u>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
-            		<li><u>Joseph Yu</u>, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
-                    <li><u>Evan Collins</u>, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
-                    <li><u>Abhishek Raj</u>, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
-                    <li><u>Kai Jiang</u>, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
+                    <li>Hunter Buttrum, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
+            		<li>Joseph Yu, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
+                    <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
+                    <li>Abhishek Raj, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
+                    <li>Kai Jiang, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2026 (expected) </li>
 
                     <div style="background-color: #F2F3F4;">
-                        <li><u>Shaif Chowdhury, Ph.D.</u>, Department of Computer Science, Baylor University, 2025 </li>
+                        <li>Shaif Chowdhury, Ph.D., Department of Computer Science, Baylor University, 2025 </li>
                             <ul>
                                 <li>First Employment: Assistant Professor, Texas A&M Kingsville</li>
                             </ul>
-                		<li><u>Feng Mi, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                		<li>Feng Mi, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                             <ul>
                                 <li>First Employment: Data Scientist, Fidelity Investments</li>
                             </ul>
-                		<li><u>Alejandro Rodriguez Perez, M.S.</u>, Department of Computer Science, Baylor University, 2023  </li>
+                		<li>Alejandro Rodriguez Perez, M.S., Department of Computer Science, Baylor University, 2023  </li>
                             <ul>
                                 <li>First Employment: AI Scientist, Cambia Health Solutions</li>
                             </ul>
@@ -169,17 +169,17 @@
             <div>
             <p><strong>Graduate Students Mentored (Beyond Baylor)</strong></p>
             	<ul>
-            		<li><u>Kai Jiang</u>, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
-                    <li><u>Kangshuo Li</u>, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
-                    <li><u>Tianhao Wang</u>, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
-                    <li><u>Yuzhe Ou</u>, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
+            		<li>Kai Jiang, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
+                    <li>Kangshuo Li, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
+                    <li>Tianhao Wang, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
+                    <li>Yuzhe Ou, Ph.D. student, The University of Texas at Dallas, 2019 Fall - present </li>
 
                     <div style="background-color: #F2F3F4;">
-                        <li><u>Sadaf Md Halim, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                        <li>Sadaf Md Halim, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                             <ul>
                                 <li>First Employment: Software Engineer, Google</li>
                             </ul>
-                        <li><u>Haoliang Wang, Ph.D.</u>, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
+                        <li>Haoliang Wang, Ph.D., Department of Computer Science, The University of Texas at Dallas, 2025 </li>
                             <ul>
                                 <li>First Employment: Assistant Professor, Nanchang Hangkong University, China</li>
                             </ul>
