--- a/services.html
+++ b/services.html
@@ -291,9 +291,9 @@
 		    <li>Search Committee Member, Department of Computer Science, Baylor University, 2025 - 2026 </li>
 		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
 		    <li>Outreach, Inclusion and Belonging Committee Member, School of Engineering and Computer Science, Baylor University, since 2024</li>
-		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
+		    <li>Engagement Committee, Department of Computer Science, Baylor University </li>
 			    <ul>
-				  <li>Engagement Committee Chair, since 2024</li>  
+				  <li>Engagement Committee Chair, 2024-2025</li>  
 				  <li>Engagement Committee Member, 2023-2024</li>  
 			    </ul>
 		    <li>Graduate Committee, Department of Computer Science, Baylor University, since 2023 </li>
