--- a/services.html
+++ b/services.html
@@ -293,8 +293,8 @@
 		    <li>Outreach, Inclusion and Belonging Committee Member, School of Engineering and Computer Science, Baylor University, since 2024</li>
 		    <li>Engagement Committee, Department of Computer Science, Baylor University </li>
 			    <ul>
-				  <li>Engagement Committee Chair, 2024-2025</li>  
-				  <li>Engagement Committee Member, 2023-2024</li>  
+				  <li>Engagement Committee Chair, 2024 - 2025</li>  
+				  <li>Engagement Committee Member, 2023 - 2024</li>  
 			    </ul>
 		    <li>Graduate Committee, Department of Computer Science, Baylor University, since 2023 </li>
 	    </ul>
