--- a/services.html
+++ b/services.html
@@ -107,8 +107,9 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
-				<li>International Joint Conference on Artificial Intelligence (IJCAI)</li> 
+				<li>International Joint Conference on Artificial Intelligence (IJCAI, Main track, Survey track)</li> 
 				<li>The Web Conference (WWW)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
