--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
 		<li>[01/2026] I received a Gift Fund from NEC Laboratories America. </li>
 		<!-- <li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
 		<li>[12/2025] I will serve as a PC member for IJCAI 2026. </li>
