--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[01/2026] One paper is accepted by WWW.</li>
 		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
 		<li>[01/2026] I received a Gift Fund from NEC Laboratories America. </li>
 		<!-- <li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
@@ -175,10 +176,16 @@
 
 
 	<div class="my-4 text-left">
-            <h2>Selected Publications</h2>
+        <h2>Selected Publications</h2>
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
-            <ul>
+        <ul>
 
+		<li>
+			<strong>[WWW'26]</strong> Class-Domain Incremental Learning on Graphs via Disentangled Knowledge Distillation. <br>
+			Qin Tian, <strong>Chen Zhao</strong>, Xintao Wu, Dong Li, Minglai Shao, Xujiang Zhao, Wenjun Wang <br>
+			<em>In Proceedings of the Web Conference</em>, 2026
+        </li>
+			
 		<li>
 			<strong>[AAAI'26]</strong> SkillGen: Learning Domain Skills for In-Context Sequential Decision Making. <br>
 			Ruomeng Ding, Wei Cheng, Minglai Shao, <strong>Chen Zhao</strong> <br>
@@ -295,7 +302,7 @@
 	    
         <div class="my-4 text-left">
             <h2>Research</h2>
-		I am generally interested in machine learning, data mining, and trustworthy AI, with a primary focus on		
+				I am generally interested in machine learning, data mining, and trustworthy AI, with a primary focus on		
 	    	<ul>
 			<li>Fairness-aware Machine Learning;</li>
 			<li>Uncertainty Quantification;</li>
