--- a/publications.html
+++ b/publications.html
@@ -144,7 +144,7 @@
                 <strong>AAAI</strong>(8),
                 <strong>CVPR</strong>(1), 
                 <strong>ICDE</strong>(1),
-                <strong>WWW</strong>(1), 
+                <strong>WWW</strong>(2), 
                 <strong>CIKM</strong>(3), 
                 <strong>SDM</strong>(1),
                 <strong>ICDM</strong>(2), 
@@ -160,6 +160,12 @@
             
                 <ol>
 
+		<li>
+			<strong>[WWW'26]</strong> Class-Domain Incremental Learning on Graphs via Disentangled Knowledge Distillation. <br>
+			Qin Tian, <strong>Chen Zhao</strong>, Xintao Wu, Dong Li, Minglai Shao, Xujiang Zhao, Wenjun Wang <br>
+			<em>In Proceedings of the Web Conference</em>, 2026
+        </li>
+					
 		<li>
 			<strong>[AAAI'26]</strong> SkillGen: Learning Domain Skills for In-Context Sequential Decision Making. <br>
 			Ruomeng Ding, Wei Cheng, Minglai Shao, <strong>Chen Zhao</strong> <br>
