--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,12 @@
             <p><strong>Preprints</strong></p>
                 <ol>
 
+
+					<li>
+						Histopathology-centered Computational Evolution of Spatial Omics: Integration, Mapping, and Foundation Models. <br>
+						Ninghui Hao, Xinxing Yang, Boshen Yan, Dong Li, Junzhou Huang, Xintao Wu, Emily S. Ruiz, Arlene Ruiz de Luzuriaga, <strong>Chen Zhao</strong>, Guihong Wan. <br>
+						<em>ArXiv preprint, 2601.07826</em>
+					</li>
 					<li>
 						Explainable Image-Centric Forgery Detection: A Survey. <br>
 						Xinyu Wu, Xiaohui Chen, Xintao Wu, Dong Li, Zhong Chen, Yi He, <strong>Chen Zhao</strong>. <br>
