--- a/talks.html
+++ b/talks.html
@@ -56,7 +56,7 @@
                             Dong Li, Guihong Wan, Xintao Wu, Yevgeniy Semenov, <strong>Chen Zhao</strong>. <br>
                             The Annual AAAI Conference on Artificial Intelligence (AAAI), Singapore, January 21st, 2026.
                             [<a href="https://sites.google.com/view/aaai26tutorial-cpath/home">Website</a>]
-<!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
+                            [<a href="https://drive.google.com/file/d/1Wmrzt6a4pEH-dK_DXuVv9rm41RhhUzfm/view?usp=sharing">Slides</a>]
                         </li>
                         
                         <li>
