--- a/talks.html
+++ b/talks.html
@@ -62,7 +62,7 @@
                         <li>
                             Dong Li, Ninghui Hao, Guihong Wan, Xintao Wu, <strong>Chen Zhao</strong>. <br>
                             The IEEE International Conference on Data Mining (ICDM), Washington D.C., November 13th, 2025.
-<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
+                            [<a href="https://www3.cs.stonybrook.edu/~icdm2025/tutorials.html#:~:text=Computational%20Pathology%20Foundation%20Models%3A%20Datasets%2C%20Adaptation%20Strategies%2C%20and%20Evaluations">Website</a>]
 <!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
                         </li>
                         
