--- a/publications.html
+++ b/publications.html
@@ -81,11 +81,6 @@
                         <em>ArXiv preprint, 2501.15724</em>
                     </li>
                     <li>
-                		Graphs Generalization under Distribution Shifts. </br>
-                		Qin Tian, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
-                		<em>ArXiv preprint, 2403.16334</em>
-                	</li>
-                    <li>
                 		Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. </br>
                 		Haoliang Wang, <strong>Chen Zhao</strong>, Yunhui Guo, Kai Jiang, Feng Chen. <br/>
                 		<em>ArXiv preprint, 2309.10209</em>
@@ -155,7 +150,7 @@
                 <strong>SDM</strong>(1),
                 <strong>ICDM</strong>(2), 
                 <strong>ECAI</strong>(1), 
-                <strong>ICASSP</strong>(3), 
+                <strong>ICASSP</strong>(4), 
                 <strong>IEEE BigData</strong>(5), 
                 <strong>PAKDD</strong>(1), 
                 <strong>ICBC</strong>(1), 
@@ -166,6 +161,12 @@
             
                 <ol>
 
+		<li>
+			<strong>[ICASSP'26]</strong> Toward Robust Node-Level Graph OOD Generalization with Semantic Awareness. </br>
+			Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Dong Li. <br/>
+			<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2026
+		</li>
+					
 		<li>
 			<strong>[WWW'26]</strong> Class-Domain Incremental Learning on Graphs via Disentangled Knowledge Distillation. <br>
 			Qin Tian, <strong>Chen Zhao</strong>, Xintao Wu, Dong Li, Minglai Shao, Xujiang Zhao, Wenjun Wang <br>
