--- a/services.html
+++ b/services.html
@@ -107,6 +107,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
 				<li>International Joint Conference on Artificial Intelligence (IJCAI, Main track, Survey track)</li> 
